Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-12 (SVN):
    * updated config.guess and config.sub from savannah git repo.

2013-02-11 (SVN):
    * h2patch: if we run into oem (m3d) version 1.08, request feedback
      from the user. likewise for the gtk-launcher patch unit.

2013-02-10 (SVN):
    * timidity: minor edits for byte order macro checks.

2013-02-10 (SVN):
    * common/q_endian.h: updated with addidional predef.sourceforge.net
      information.

2013-02-10 (SVN):
    * timidity: removed read_meta_data() stuff altogether.
    * timidity: documented our changes in the CHANGES file.

2013-02-10 (SVN):
    * utils, hcc: fixed a _Wclobbered warning in CO_CompileFile() by
      making the local boolean inProgress variable volatile.

2013-02-10 (SVN):
    * timidity: fixed all of the gcc -Wclobbered warnings by fixing my
      setjmp/longjmp mistakes including one major thinko in readconfig
      recursive calls. made safe_malloc() to 0-fill the memory before
      returning. changed sine() macro to use standart M_PI instead of
      PI. removed the unused PATH_SEP macro from options.h. defined a
      new TIM_MAXPATH, expanding to MAXPATHLEN or PATH_MAX if they are
      available or to 1024 otherwise. changed the size of path arrays
      to TIM_MAXPATH, instead of the arbitrary number 1024. moved the
      inclusion of options.h from the C-sources to timidity_internal.h.
      bumped LIBTIMIDITY_VERSION_MINOR to 2, because our local copy is
      noticeably different from original libtimidity-0.1.0.
    * updated version date stamp to 2013-02-10.

2013-02-08 (SVN):
    * timidity: abandoned libtimidity invention of storing metadata in
      the song. now we either skip the metadata, or print to stderr if
      compiled with TIMIDITY_DEBUG defined.
    * snd_timidity.c: adjusted for the metadata changes.
    * updated version date stamp to 2013-02-08.

2013-02-08 (SVN):