@@ -21,16 +21,13 @@
  * 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
  */
 
-#if defined(H2W)
-/* hexenworld */
-#	include "../../resource/h2w_ico.xbm"
+#if defined(H2W)	/* hexenworld */
+#include "../../resource/h2w_ico.xbm"
 
-#elif defined(H2MP)
-/* hexen2 with mission pack */
-#	include "../resource/h2mp_ico.xbm"
+#elif defined(H2MP)	/* hexen2 with mission pack */
+#include "../resource/h2mp_ico.xbm"
 
-#else
-/* plain hexen2 */
-#	include "../resource/h2_ico.xbm"
+#else			/* plain hexen2 */
+#include "../resource/h2_ico.xbm"
 #endif
 
