@@ -1,47 +1,0 @@
-/* Hammer of Thyrion 64x64 xbm format icon for Hexen II */
-#define HOT_ICON_WIDTH		64
-#define HOT_ICON_HEIGHT		64
-unsigned const char HOT_ICON_bits[] = {
-   0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x12, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x1c, 0x00, 0x00, 0x00, 0x10, 0x00,
-   0x00, 0x00, 0x18, 0x00, 0x00, 0x00, 0x08, 0x00, 0x00, 0x00, 0x10, 0x00,
-   0x00, 0x00, 0x0c, 0x00, 0x00, 0x00, 0xa4, 0x00, 0x00, 0x00, 0x06, 0x00,
-   0x00, 0x00, 0x06, 0x00, 0x00, 0x00, 0x06, 0x00, 0x00, 0x00, 0x4f, 0x00,
-   0x00, 0x00, 0x03, 0x00, 0x00, 0x00, 0x60, 0x00, 0x00, 0x80, 0x01, 0x00,
-   0x00, 0x00, 0xc0, 0x00, 0x00, 0x80, 0x01, 0x00, 0x00, 0x00, 0xc0, 0x00,
-   0x00, 0xc0, 0x01, 0x00, 0x00, 0x00, 0x80, 0x01, 0x00, 0xe0, 0x01, 0x00,
-   0x00, 0x00, 0x00, 0x01, 0x00, 0xf0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x03,
-   0x00, 0x70, 0x00, 0x00, 0x00, 0x00, 0x20, 0x06, 0x00, 0x78, 0x00, 0x00,
-   0x00, 0x00, 0x40, 0x0c, 0x00, 0x3c, 0x00, 0x00, 0x00, 0x00, 0x40, 0x0c,
-   0x00, 0x1e, 0x00, 0x00, 0x00, 0x00, 0x80, 0x18, 0x00, 0x0e, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x11, 0x80, 0x0f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x22,
-   0xc0, 0x07, 0x00, 0x00, 0x00, 0x00, 0x00, 0x64, 0xa0, 0x03, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x6c, 0xf0, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0xf0,
-   0xe8, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0xe0, 0xf1, 0x01, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0xc0, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xc0,
-   0x7f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x80, 0x7f, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x80, 0x3f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x9f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0f, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x1f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x60,
-   0x1f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x60, 0x1f, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x30, 0x3f, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x18,
-   0x39, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x8c, 0x38, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0xc6, 0x70, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x47,
-   0x40, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x23, 0x80, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x80, 0x31, 0x81, 0x00, 0x00, 0x00, 0x00, 0x00, 0xc0, 0x10,
-   0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0xe0, 0x88, 0x00, 0x03, 0x00, 0x00,
-   0x00, 0x00, 0x70, 0x44, 0x00, 0x03, 0x00, 0x00, 0x00, 0x00, 0x30, 0x66,
-   0x00, 0x07, 0x00, 0x00, 0x00, 0x00, 0x00, 0x22, 0x00, 0x02, 0x00, 0x00,
-   0x00, 0x00, 0x10, 0x11, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x88, 0x09,
-   0x00, 0x14, 0x00, 0x00, 0x00, 0x00, 0xcc, 0x0c, 0x00, 0x20, 0x00, 0x00,
-   0x00, 0x00, 0x44, 0x04, 0x00, 0x40, 0x00, 0x00, 0x00, 0x00, 0x22, 0x02,
-   0x00, 0xc0, 0x00, 0x00, 0x00, 0x00, 0x30, 0x01, 0x00, 0x80, 0x01, 0x00,
-   0x00, 0x00, 0x91, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x80, 0x58, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0xc0, 0x0c, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x20, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x30, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x40, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x20, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x10, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x08, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x0c, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
