@@ -1,7 +1,7 @@
-/* Hammer of Thyrion 32x32 xbm format icon for Hexen II */
-#define HOT_ICON_WIDTH		32
-#define HOT_ICON_HEIGHT		32
-unsigned const char HOT_ICON_bits[] = {
+/* uHexen2 xbm format icon - Hexen II */
+#define hx2icon_width 32
+#define hx2icon_height 32
+static const unsigned char hx2icon_bits[] = {
    0x00, 0x00, 0x00, 0x00, 0x00, 0x03, 0x00, 0x00, 0x00, 0x08, 0x00, 0x00,
    0x00, 0x1e, 0x00, 0x00, 0x80, 0x2d, 0x00, 0x40, 0x00, 0x3c, 0x00, 0x00,
    0x00, 0x10, 0x00, 0x08, 0x00, 0x20, 0x00, 0x0c, 0x00, 0x10, 0x00, 0x0e,
