@@ -1,7 +1,7 @@
-/* Hammer of Thyrion 32x32 xbm format icon for HexenWorld */
-#define HOT_ICON_WIDTH		32
-#define HOT_ICON_HEIGHT		32
-unsigned const char HOT_ICON_bits[] = {
+/* uHexen2 xbm format icon - Hexen2World */
+#define hx2icon_width 32
+#define hx2icon_height 32
+static const unsigned char hx2icon_bits[] = {
    0x00, 0x00, 0x00, 0x00, 0xc0, 0xff, 0xfe, 0x07, 0xc0, 0xff, 0xff, 0x07,
    0xc0, 0xeb, 0x9e, 0x07, 0x80, 0x73, 0xdc, 0x03, 0x00, 0x37, 0x98, 0x03,
    0x00, 0x3a, 0xd8, 0x01, 0x54, 0x37, 0x98, 0x2b, 0xff, 0x2b, 0xd8, 0xff,
