@@ -3,6 +3,12 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2013-02-14 (SVN):
+    * engine/resource: renamed titles in the xbm headers to hx2icon.
+      remove the unused 64x64 h2 icons.
+    * vid_sdl.c, gl_vidsdl.c (VID_SetIcon): document xbm processing.
+      adjust for the renamed xbm titles.
+
 2013-02-12 (SVN):
     * updated config.guess and config.sub from savannah git repo.
 
